--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
       <version>${drools.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-spring</artifactId>
+      <version>${drools.version}</version>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
